Closed Bug 1650260 Opened 5 years ago Closed 5 years ago

Crash in [@ mozilla::BlankAudioDataCreator::Create]

Categories

(Core :: Audio/Video: Playback, defect, P3)

Unspecified
Windows 10
defect

Tracking

()

RESOLVED FIXED
mozilla80
Tracking Status
firefox-esr68 --- wontfix
firefox-esr78 --- wontfix
firefox77 --- wontfix
firefox78 --- wontfix
firefox79 --- wontfix
firefox80 --- fixed

People

(Reporter: mccr8, Assigned: jya)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-efeeb18a-2260-414c-9006-529230200701.

Top 10 frames of crashing thread:

0 xul.dll mozilla::BlankAudioDataCreator::Create dom/media/platforms/agnostic/BlankDecoderModule.cpp:108
1 xul.dll mozilla::DummyMediaDataDecoder::Decode dom/media/platforms/agnostic/DummyMediaDataDecoder.cpp:39
2 xul.dll mozilla::detail::ProxyFunctionRunnable<`lambda at /builds/worker/checkouts/gecko/dom/media/platforms/wrappers/AudioTrimmer.cpp:36:44', mozilla::MozPromise<nsTArray<RefPtr<mozilla::MediaData> >, mozilla::MediaResult, 1> >::Run xpcom/threads/MozPromise.h:1564
3 xul.dll mozilla::TaskQueue::Runner::Run xpcom/threads/TaskQueue.cpp:158
4 xul.dll nsThreadPool::Run xpcom/threads/nsThreadPool.cpp:299
5 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1234
6 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:513
7 xul.dll mozilla::ipc::MessagePumpForNonMainThreads::Run ipc/glue/MessagePump.cpp:332
8 xul.dll MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:327
9 xul.dll MessageLoop::Run ipc/chromium/src/base/message_loop.cc:309

The crash reason is MOZ_DIAGNOSTIC_ASSERT(aSample->mDuration == data->mDuration) (must be equal).

Assignee: nobody → jyavenard

While the duration returned by the demuxer is typically equal to the decoded size; recent cases have shown that this isn't always the case.

Now, the only way you can encounter this bug is if the user has set some pref. the audio BlankDecoderModule is never used by default; only the video one.

Severity: -- → S3
Priority: -- → P3
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: