Bug 1650260 - Remove assertion. r=bryce

While the duration returned by the demuxer is typically equal to the decoded size; recent cases have shown that this isn't always the case.

Now, the only way you can encounter this bug is if the user has set some pref. the audio BlankDecoderModule is never used by default; only the video one.

Differential Revision: https://phabricator.services.mozilla.com/D82138