dom/media/platforms/agnostic/BlankDecoderModule.cpp
@@ -105,7 +105,6 @@ already_AddRefed<MediaData> BlankAudioDataCreator::Create(
   RefPtr<AudioData> data(new AudioData(aSample->mOffset, aSample->mTime,
                                        std::move(samples), mChannelCount,
                                        mSampleRate));
-  MOZ_DIAGNOSTIC_ASSERT(aSample->mDuration == data->mDuration, "must be equal");
   return data.forget();
 }
 
